RESOLVED FIXED167049
WebAssembly: Suppress warnings & errors in GCC
https://bugs.webkit.org/show_bug.cgi?id=167049
Summary WebAssembly: Suppress warnings & errors in GCC
Yusuke Suzuki
Reported 2017-01-14 10:01:51 PST
WebAssembly: Suppress warnings & errors in GCC
Attachments
Patch (4.94 KB, patch)
2017-01-14 10:14 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2017-01-14 10:14:24 PST
Yusuke Suzuki
Comment 2 2017-01-14 11:11:53 PST
Comment on attachment 298855 [details] Patch Thanks :)
WebKit Commit Bot
Comment 3 2017-01-14 11:36:30 PST
Comment on attachment 298855 [details] Patch Clearing flags on attachment: 298855 Committed r210769: <http://trac.webkit.org/changeset/210769>
WebKit Commit Bot
Comment 4 2017-01-14 11:36:35 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5 2017-01-14 13:52:10 PST
Comment on attachment 298855 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=298855&action=review > Source/JavaScriptCore/ChangeLog:12 > + Add missing { } after the switch. Ideally, it is not necessary. > + But in GCC, it is required. Since this function is fairly large, > + I think the code generated by this does not cause performance > + regression. This has been coming up a *lot* for me. I suspect this is about older versions of GCC, since we see it on the EFL bot and not the GTK bot, but I suppose we need to support those older versions.
Darin Adler
Comment 6 2017-01-14 13:52:55 PST
Comment on attachment 298855 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=298855&action=review > Source/JavaScriptCore/wasm/generateWasmValidateInlinesHeader.py:130 > +#if COMPILER(GCC) && ASSERT_DISABLED It bothers me a little that this says COMPILER(GCC) if I am correct and the false positive warning does not occurs with newer versions of GCC.
Yusuke Suzuki
Comment 7 2017-01-14 14:51:56 PST
Comment on attachment 298855 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=298855&action=review >> Source/JavaScriptCore/ChangeLog:12 >> + regression. > > This has been coming up a *lot* for me. I suspect this is about older versions of GCC, since we see it on the EFL bot and not the GTK bot, but I suppose we need to support those older versions. I'm not 100% confident, but I guess this is due to the GCC version. But it is rather caused in the newer GCC I guess. At least, I tested it on GCC 6.3.1 on Fedora 25. It is quite new: 6.3 is released at December 21, 2016. >> Source/JavaScriptCore/wasm/generateWasmValidateInlinesHeader.py:130 >> +#if COMPILER(GCC) && ASSERT_DISABLED > > It bothers me a little that this says COMPILER(GCC) if I am correct and the false positive warning does not occurs with newer versions of GCC. This warning is caused in the GCC at least version 6.3.1. So I think this macro is not meaningless on the very new GCC.
Note You need to log in before you can comment on or make changes to this bug.