Source/JavaScriptCore/wasm/generateWasmValidateInlinesHeader.py
@@ -125,6 +125,13 @@ contents = wasm.header + """
 
 #if ENABLE(WEBASSEMBLY)
 
+#include <wtf/StdLibExtras.h>
+
+#if COMPILER(GCC) && ASSERT_DISABLED
+#pragma GCC diagnostic push
+#pragma GCC diagnostic ignored "-Wreturn-type"
+#endif // COMPILER(GCC) && ASSERT_DISABLED
+
 namespace JSC { namespace Wasm {
 
 """ + unarySpecializations + binarySpecializations + """
@@ -150,6 +157,10 @@ auto Validate::store(StoreOpType op, ExpressionType pointer, ExpressionType valu
 }
 
 } } // namespace JSC::Wasm
+
+#if COMPILER(GCC) && ASSERT_DISABLED
+#pragma GCC diagnostic pop
+#endif // COMPILER(GCC) && ASSERT_DISABLED
 
 #endif // ENABLE(WEBASSEMBLY)
 
